--- a/aqwa_cars_mobile/package.json
+++ b/aqwa_cars_mobile/package.json
@@ -14,20 +14,24 @@
   },
   "dependencies": {
     "@config-plugins/react-native-webrtc": "^9.0.0",
+    "@expo-google-fonts/roboto": "^0.2.3",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "^8.0.0",
+    "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^2.2.4",
     "@stripe/stripe-react-native": "^0.37.3",
     "axios": "^1.6.8",
     "expo": "~51.0.4",
+    "expo-app-loading": "^2.1.1",
     "expo-camera": "~15.0.7",
     "expo-document-picker": "^12.0.1",
     "expo-font": "~12.0.5",
     "expo-image-picker": "^15.0.4",
     "expo-linear-gradient": "13.0.2",
     "expo-location": "17.0.1",
+    "lottie-react-native": "^6.7.2",
     "moment": "^2.30.1",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
@@ -41,11 +45,14 @@
     "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-reanimated": "^3.11.0",
     "react-native-safe-area-context": "4.10.1",
+    "react-native-star-rating": "^1.1.0",
     "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "^1.1.0",
+    "react-native-text-ticker": "^1.14.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.0.2",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
