--- a/aqwa_cars_mobile/.gitignore
+++ b/aqwa_cars_mobile/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 node_modules/
+package.json
 
 # Expo
 .expo/
@@ -23,7 +24,7 @@ web-build/
 npm-debug.*
 yarn-debug.*
 yarn-error.*
-
+yarn.lock
 # macOS
 .DS_Store
 *.pem
