--- a/aqwa_cars_mobile/package.json
+++ b/aqwa_cars_mobile/package.json
@@ -69,6 +69,7 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-select-dropdown": "^3.4.0",
     "react-native-shimmer-placeholder": "^2.0.9",
+    "react-native-star-rating": "^1.1.0",
     "react-native-svg": "14.1.0",
     "react-native-svg-transformer": "^1.1.0",
     "react-native-swipe-up-down": "^1.2.0",
